# aurarecord

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-native/: Cargo.toml  package.json
src-native/src/: lib.rs
src/main/: main.ts
src/preload/: index.ts
src/renderer/: index.html  tsconfig.json
src/renderer/src/: App.tsx  index.css  tsconfig.json
