[package]
name = "aurarecord-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
rdev = "0.5.3"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"